--- a/content/spell-check-project/Dockerfile
+++ b/content/spell-check-project/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:11-slim
 
 # Set environment variables for Spark
 ENV SPARK_VERSION=3.4.1
-ENV HADOOP_VERSION=2
+ENV HADOOP_VERSION=3
 ENV SPARK_HOME=/opt/spark
 ENV PATH=$SPARK_HOME/bin:$PATH
 
@@ -12,13 +12,13 @@ RUN apt-get update && \
     apt-get install -y python3 python3-pip curl && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Download and install Apache Spark
-RUN curl -fsSL https://downloads.apache.org/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz | \
+# Download and install Apache Spark (Hadoop 3 prebuilt)
+RUN curl -fsSL https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz | \
     tar -xz -C /opt && \
     mv /opt/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} $SPARK_HOME
 
-# Install Python dependencies
-RUN pip3 install --no-cache-dir pyspark==${SPARK_VERSION} spark-nlp
+# Install Python dependencies (including numpy)
+RUN pip3 install --no-cache-dir pyspark==${SPARK_VERSION} spark-nlp numpy
 
 # Set the working directory
 WORKDIR /app
